kubernetes/argocd/route-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: argocd-route-http
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"

spec:
  parentRefs:
    - name: main
      namespace: gateway

  hostnames:
    - argocd.xmoto.org

  rules:
    - backendRefs:
      - name: argo-argocd-server
        port: 80
